--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Secular+One" rel="stylesheet">
     <title>Dmitry Pimenov</title>
     <style>
       html, body, div, span, a, p, ul, li, h1, code, nav {
@@ -19,7 +20,7 @@
       /*pass window height (w/o scroll bars) down to react app, note can't use vh becasue that
       includes scroll bars and mobile browser footer, etc so doesn't give viewable area*/
       html, body { height: 100%; }
-      #root { background-color: #F0F0F0; min-height: 100%; }
+      #root { background-color: transparent; min-height: 100%; }
       /*required for IE/Edge to be compatible with left:50vw & transform:translate(-50%, 0),
       otherwise there is a phantom div on the right side of the screen (from the left:50vw),
       that the window will scroll to. Note the left:50vw and transform is used to center content
