--- a/public/html/projects.html
+++ b/public/html/projects.html
@@ -1,71 +1,119 @@
 <h3>What I've built</h3> 
-<h4> Tapioca (November 2018 - present)</h4> 
-<iframe src="https://player.vimeo.com/video/321909326" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<ul> 
-    <li> Built platform that enables platform owners to better support API integrators </li>
-    <li> Developed a custom OpenAPI 3.0 parser to automatically analyze request bodies for correctness </li> 
-    <li> Wrote service, admin console web app, support web app and SDKs </li>
-    <li> <a href='https://tapioca.help/'>Do you maintain an API? Join the beta</a></li> 
-</ul> 
+<div className="Projects">
+    <div className="Project">
+        <h4> Tapioca (November 2018 - present)</h4> 
+        <span className="ProjectDetails">
+            <iframe src="https://player.vimeo.com/video/321909326" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <ul> 
+                <li> Built platform that enables platform owners to better support API integrators </li>
+                <li> Developed a custom OpenAPI 3.0 parser to automatically analyze request bodies for correctness </li> 
+                <li> Wrote service, admin console web app, support web app and SDKs </li>
+                <li> <a href='https://tapioca.help/'>Do you maintain an API? Join the beta</a></li> 
+            </ul> 
+        </span>
+    </div>
 
-<h4> GraphQL for Microsoft Graph (July 2017 - present)</h4> 
-<img class='App-screenshot' src='./public/img/gql1.gif' /> 
-<ul> 
-    <li> Developed novel means of generating GraphQL service from OData service description </li> 
-    <li> Implemented translation of structural and behavioral patterns from OData to GraphQL (collection mechanics, type annotation, entity inheritance) </li> 
-    <li> <a href='http://graphql-demo.azurewebsites.net/'>See it live</a></li> 
-    <li> <a href='https://github.com/microsoftgraph/graphql-demo'>Fork me on GitHub</a></li></ul> 
-</ul> 
-<h4> 4EJ - Google Maps for infographics (July 2017 - present)</h4> 
-<img class='App-screenshot' src='./public/img/4ej1.png' /> 
-<ul> 
-    <li>Designed, built and shipped web app & service for sharing and exploring longform content (documents, infographics, etc)</li> 
-    <li>Developed mechanisms for clustering related information</li> 
-    <li>Built using React, Node.js and MongoDB</li> 
-    <li> <a href='https://4ej.co/'>Explore in 4EJ</a></li> 
-</ul> 
-<h4> Grassroots - Local Political Discussion (March 2017 - present) </h4> 
-    <img class='App-screenshot' src='http://a2.mzstatic.com/us/r30/Purple118/v4/50/17/08/501708c9-cd8d-94f0-dc2d-621edae611e5/screen696x696.jpeg' /><img class='App-screenshot' src='http://a3.mzstatic.com/us/r30/Purple128/v4/f8/da/9f/f8da9fa0-54be-c577-9782-21f111ec1402/screen696x696.jpeg' /> 
-    <ul>
-    <li> Designed, built and shipped an iOS app for enabling political discussion among people who share a common congressional district </li> 
-    <li> App built natively using Swift 3, backend built using Node.js/Express, MySQL and Redis</li> 
-    <li> <a href='https://itunes.apple.com/us/app/grassroots-local-political-discussion/id1257472526?ls=1&mt=8'> Available on the App Store</a></li>
-</ul> 
-<h4> Cardiyo - Social Run Tracking (December 2016 - present) </h4> 
-<img class='App-screenshot' src='http://a2.mzstatic.com/us/r30/Purple111/v4/63/c5/4c/63c54c49-cc13-ce0d-6e32-6809b805206b/screen696x696.jpeg' /><img class='App-screenshot' src='http://a2.mzstatic.com/us/r30/Purple111/v4/c6/8f/55/c68f55fa-7362-b174-d10b-96e9634255cf/screen696x696.jpeg' /> 
-<ul>
-    <li> Designed, built and shipped a social run tracking app that allows users to share running experiences (courses, photos, captions) vs just stats </li> 
-    <li> Wrote iOS app in Swift 3, backend using Node.js/Express, MySQL</li> 
-    <li> <a href='https://itunes.apple.com/us/app/cardiyo-social-run-tracker/id1198644231?ls=1&mt=8'> Available on the App Store</a></li>
-</ul> 
-<h4> 206 Neighborhoods (September 2016)</h4> 
-<img class='App-screenshot' src='https://github.com/dpim/206/raw/master/screenshot.png' /> 
-<ul>
-    <li> Shipped a web app that makes it easy for prospective renters/home buyers to research and compare Seattle neighborhoods in terms of schools, public facilities and public/property safety  </li> 
-    <li> Built a backend in Node.js for proxying service-to-service queries to Seattle Open Data SoQL APIs, aggregating relevant data and resolving locations in a variety of formats </li> 
-    <li> <a href='http://206neigh.azurewebsites.net/'>See it live</a></li> 
-    <li> <a href='https://github.com/dpim/206'>Fork me on GitHub</a></li>
-</ul> 
-<h4> Wedge Analytics (September 2014 - February 2015) </h4> 
-<img class='App-screenshot' src='./public/img/wedge1.png' /> 
-    <ul>
-    <li> Built a proof-of-concept analytics framework for tracking deep link schemes on device </li> 
-    <li> <a href='https://www.youtube.com/watch?v=1INVQXbdoZI'>See it in action</a></li> 
-</ul> 
-<h4> Bottle (November 2013 - November 2014) </h4> 
-<img class='App-screenshot' src='./public/img/bottle1.png' /> 
-<img class='App-screenshot' src='./public/img/bottle2.png' /> 
-<ul>
-    <li> Designed, developed and shipped iOS app for sharing pictures with people around you (like Snapchat for places) </li> 
-    <li> Built out image submission flow, local image feed, direct messaging among other experiences </li> 
-    <li> Worked with multiple web APIs, MapKit, background uploading, asynchronous content loading </li> 
-    <li> Orchestrated targeted marketing, development of product identity and branding </li>  
-    <li> Ranked in the Top 500 Photography apps in Switzerland </li>  
-</ul> 
-<h4> Helio (June 2013 - August 2013) </h4> 
-<img class='App-screenshot' src='./public/img/helio1.png' /> 
-<img class='App-screenshot' src='./public/img/helio2.png' /> 
-<ul>
-    <li> Shipped an iOS app for passive sleep tracking </li> 
-    <li> Developed algorithm for adjusting alarm time based on user feedback </li> 
-</ul>
+    <div className="Project">
+        <h4> GraphQL for Microsoft Graph (July 2017 - present)</h4> 
+        <span className="ProjectDetails">
+            <img class='App-screenshot' src='./public/img/gql1.gif' /> 
+            <ul> 
+                <li> Developed novel means of generating GraphQL service from OData service description </li> 
+                <li> Implemented translation of structural and behavioral patterns from OData to GraphQL (collection mechanics, type annotation, entity inheritance) </li> 
+                <li> <a href='http://graphql-demo.azurewebsites.net/'>See it live</a></li> 
+                <li> <a href='https://github.com/microsoftgraph/graphql-demo'>Fork me on GitHub</a></li></ul> 
+            </ul> 
+        </span>
+    </div>
+
+    <div className="Project">
+        <h4> 4EJ - Google Maps for infographics (July 2017 - present)</h4> 
+        <span className="ProjectDetails">
+            <img class='App-screenshot' src='./public/img/4ej1.png' /> 
+            <ul> 
+                <li>Designed, built and shipped web app & service for sharing and exploring longform content (documents, infographics, etc)</li> 
+                <li>Developed mechanisms for clustering related information</li> 
+                <li>Built using React, Node.js and MongoDB</li> 
+                <li> <a href='https://4ej.co/'>Explore in 4EJ</a></li> 
+            </ul> 
+        </span>
+    </div>
+
+    <div className="Project">
+        <h4> Grassroots - Local Political Discussion (March 2017 - present) </h4> 
+        <span className="ProjectDetails">
+            <img class='App-screenshot' src='./public/img/grass1.png' /> 
+            <img class='App-screenshot' src='./public/img/grass2.png' /> 
+            <ul>
+                <li> Designed, built and shipped an iOS app for enabling political discussion among people who share a common congressional district </li> 
+                <li> App built natively using Swift 3, backend built using Node.js/Express, MySQL and Redis</li> 
+                <li> <a href='https://itunes.apple.com/us/app/grassroots-local-political-discussion/id1257472526?ls=1&mt=8'> Available on the App Store</a></li>
+            </ul> 
+        </span>
+    </div>
+
+    <div className="Project">
+        <h4> Cardiyo - Social Run Tracking (December 2016 - present) </h4> 
+        <span className="ProjectDetails">
+            <img class='App-screenshot' src='./public/img/cyo1.png' /> 
+            <img class='App-screenshot' src='./public/img/cyo2.png' /> 
+            <ul>
+                <li> Designed, built and shipped a social run tracking app that allows users to share running experiences (courses, photos, captions) vs just stats </li> 
+                <li> Wrote iOS app in Swift 3, backend using Node.js/Express, MySQL</li> 
+                <li> <a href='https://itunes.apple.com/us/app/cardiyo-social-run-tracker/id1198644231?ls=1&mt=8'> Available on the App Store</a></li>
+            </ul> 
+        </span>
+    </div>
+
+    <div className="Project">
+        <h4> 206 Neighborhoods (September 2016)</h4> 
+        <span className="ProjectDetails">
+            <img class='App-screenshot' src='https://github.com/dpim/206/raw/master/screenshot.png' /> 
+            <ul>
+                <li> Shipped a web app that makes it easy for prospective renters/home buyers to research and compare Seattle neighborhoods in terms of schools, public facilities and public/property safety  </li> 
+                <li> Built a backend in Node.js for proxying service-to-service queries to Seattle Open Data SoQL APIs, aggregating relevant data and resolving locations in a variety of formats </li> 
+                <li> <a href='http://206neigh.azurewebsites.net/'>See it live</a></li> 
+                <li> <a href='https://github.com/dpim/206'>Fork me on GitHub</a></li>
+            </ul> 
+        </span>
+    </div>
+
+    <div className="Project">
+        <h4> Wedge Analytics (September 2014 - February 2015) </h4> 
+        <span className="ProjectDetails">
+            <img class='App-screenshot' src='./public/img/wedge1.png' /> 
+                <ul>
+                <li> Built a proof-of-concept analytics framework for tracking deep link schemes on device </li> 
+                <li> <a href='https://www.youtube.com/watch?v=1INVQXbdoZI'>See it in action</a></li> 
+            </ul> 
+        </span>
+    </div>
+
+    <div className="Project">
+        <h4> Bottle (November 2013 - November 2014) </h4> 
+        <span className="ProjectDetails">
+            <img class='App-screenshot' src='./public/img/bottle1.png' /> 
+            <img class='App-screenshot' src='./public/img/bottle2.png' /> 
+            <ul>
+                <li> Designed, developed and shipped iOS app for sharing pictures with people around you (like Snapchat for places) </li> 
+                <li> Built out image submission flow, local image feed, direct messaging among other experiences </li> 
+                <li> Worked with multiple web APIs, MapKit, background uploading, asynchronous content loading </li> 
+                <li> Orchestrated targeted marketing, development of product identity and branding </li>  
+                <li> Ranked in the Top 500 Photography apps in Switzerland </li>  
+            </ul> 
+        </span>
+    </div>
+
+    <div className="Project">
+        <h4> Helio (June 2013 - August 2013) </h4> 
+        <span className="ProjectDetails">
+            <img class='App-screenshot' src='./public/img/helio1.png' /> 
+            <img class='App-screenshot' src='./public/img/helio2.png' /> 
+            <ul>
+                <li> Shipped an iOS app for passive sleep tracking </li> 
+                <li> Developed algorithm for adjusting alarm time based on user feedback </li> 
+            </ul>
+        </span>
+    </div>
+
+</div>
