moving images to right place

--- a/public/html/projects.html
+++ b/public/html/projects.html
@@ -42,8 +42,8 @@
     <div className="Project">
         <h4> Grassroots - Local Political Discussion (March 2017 - present) </h4> 
         <span className="ProjectDetails">
-            <img class='App-screenshot' src='./public/img/grass1.png' /> 
-            <img class='App-screenshot' src='./public/img/grass2.png' /> 
+            <img class='App-screenshot' src='./public/img/grass1.jpeg' /> 
+            <img class='App-screenshot' src='./public/img/grass2.jpeg' /> 
             <ul>
                 <li> Designed, built and shipped an iOS app for enabling political discussion among people who share a common congressional district </li> 
                 <li> App built natively using Swift 3, backend built using Node.js/Express, MySQL and Redis</li> 
@@ -55,8 +55,8 @@
     <div className="Project">
         <h4> Cardiyo - Social Run Tracking (December 2016 - present) </h4> 
         <span className="ProjectDetails">
-            <img class='App-screenshot' src='./public/img/cyo1.png' /> 
-            <img class='App-screenshot' src='./public/img/cyo2.png' /> 
+            <img class='App-screenshot' src='./public/img/cyo1.jpeg' /> 
+            <img class='App-screenshot' src='./public/img/cyo2.jpeg' /> 
             <ul>
                 <li> Designed, built and shipped a social run tracking app that allows users to share running experiences (courses, photos, captions) vs just stats </li> 
                 <li> Wrote iOS app in Swift 3, backend using Node.js/Express, MySQL</li> 
