updates to styling

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -5,7 +5,6 @@
     I've shipped a number of developer tools and social networks (see <a href="/projects">Projects</a>).
     Professionally, I get excited about challenging assumptions about how technologies should work and strive to build tools that are elegant, observable and human-centric.
 </p> 
-<hr />
 
 <h3>Professional experience</h3>
 <div className="ProExperience">
@@ -39,7 +38,7 @@
     </ul>
 </div>
 <h3>Education</h3>
-    <h4>BS, Applied and Computational Math Sciences, University of Washington (June 2012 - June 2015)</h4> 
+    <h4>BS, Applied + Computational Math Sciences, UW (June 2012 - June 2015)</h4> 
     <a href='https://acms.washington.edu/'>ACMS at the University of Washington</a> 
     <ul>
         <li>Concentration in discrete math and algorithms</li>
