--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,27 +1,24 @@
 <h3>About me</h3>
 <img class='Profile' src='./public/img/finland.jpg' alt='photo of Dmitry' /> 
 <p>
-    I'm a product person that enjoys crafting experiences that unlock new possibilities for others. 
-    I've shipped a number of developer tools and social networks (see <a href="/projects">Projects</a>).
-    Professionally, I get excited about challenging assumptions about how technologies should work and strive to build tools that are elegant, observable and human-centric.
+    I'm an engineer, product leader and futurist.
+    I've shipped a number of interesting <a href="/projects">developer tools and social networks</a>.
+    I get excited challenging the technological status quo through building radically better experiences.
 </p> 
 
 <h3>Professional experience</h3>
 <div className="ProExperience">
     <h4>Product Manager, Facebook (July 2018  - present)</h4>
     <ul>
-        <li>Drove product strategy for developer tools spanning code editing, source control interfaces, code browsing and continuous integration</li>
-        <li>Helped establish culture of product and design-centric thinking in historically engineering driven space</li>
+        <li>Currently working on Calibra (Blockchain) team, focusing on Developer Platform</li>
     </ul>
     <h4>Program Manager II, Microsoft (August 2017 - March 2018)</h4>
     <a href='https://developer.microsoft.com/en-us/graph/code-samples-and-sdks'>Microsoft Graph</a>
     <ul>
-        <li>Defined Microsoft Graph SDK strategy and execution plan</li>
-        <li>Coordinated across teams to provide consistent, up-to-date client libraries across broad range of platforms</li>
-        <li>Drove platform prioritization and infrastructure efforts that significantly increased shipping cadence </li>
-        <li>Evangelized Microsoft Graph's developer experience at numerous conferences and events. </li>
-        <li>Established recurring community call for demonstrating new functionality and highlighting community contributions</li>
-        <li>Served an advisory role for new Office REST APIs</li>
+        <li> Defined Microsoft Graph SDK strategy, evangelism and execution plans </li>
+        <li>Headed initiatives that led SDK usage to outpace overall Microsoft Graph adoption </li>
+        <li>Served advisory role for API design and developer strategy across Office </li>
+        <li>Organized and led monthly developer community call for Microsoft Graph</li>
         <li>Prototyped a tool for generating GraphQL front-ends atop existing OData services. Demo tooling has seen 10,000s of queries issued</li>
     </ul>
     <h4>Program Manager, Microsoft (June 2015 - August 2017)</h4>
