--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,9 +1,15 @@
 <h3>About me</h3>
-<img class='Profile' src='./public/img/finland.jpg' alt='photo of Dmitry' /> 
+<img class='Profile' src='./public/img/dmitry.jpg' alt='photo of Dmitry' /> 
 <p>
-    I'm an engineer, product leader and futurist.
-    I've shipped a number of interesting <a href="/projects">developer tools and social networks</a>.
-    I get excited challenging the technological status quo through building radically better experiences.
+    I'm an engineer, product thinker and futurist.
+    <br />
+    <br />
+    Professionally, I've worked on building large-scale developer platforms, productivity software and blockchain applications.
+    At the same time, I've shipped a number of interesting <a href="/projects">developer tools and social networks</a> on my own.
+    <br />
+    <br />
+    I'm excited by opportunities to create technology that addresses meaningful problems for everyday people.
+    I believe software can augment our lives for the better and make individuals more empowered, productive and connected.
 </p> 
 
 <h3>Professional experience</h3>
@@ -15,7 +21,7 @@
     <h4>Program Manager II, Microsoft (August 2017 - March 2018)</h4>
     <a href='https://developer.microsoft.com/en-us/graph/code-samples-and-sdks'>Microsoft Graph</a>
     <ul>
-        <li> Defined Microsoft Graph SDK strategy, evangelism and execution plans </li>
+        <li>Defined Microsoft Graph SDK strategy, evangelism and execution plans </li>
         <li>Headed initiatives that led SDK usage to outpace overall Microsoft Graph adoption </li>
         <li>Served advisory role for API design and developer strategy across Office </li>
         <li>Organized and led monthly developer community call for Microsoft Graph</li>
