--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -1,5 +1,5 @@
 <h3>How to reach me</h3> 
-<img class='Profile' src='./public/img/finland.jpg' alt='photo of Dmitry' /> 
+<img class='Profile' src='./public/img/dmitry.jpg' alt='photo of Dmitry' /> 
 <ul>
     <li><a href='https://www.linkedin.com/in/dmitryspimenov/'>LinkedIn</a></li> 
     <li><a href='https://www.twitter.com/dpim'>Twitter</a></li>
