--- a/contact/index.html
+++ b/contact/index.html
@@ -16,10 +16,10 @@
             <div>
                 <main>
                     <div class="link-menu">
-                        <a href="../index.html">About</a>
-                        <a href="../projects/index.html">Projects</a>
-                        <a href="../resume/index.html">Résumé</a>
-                        <a href="../contact/index.html">Contact</a>
+                        <a href="../">About</a>
+                        <a href="../projects/">Projects</a>
+                        <a href="../resume/">Résumé</a>
+                        <a href="../contact/">Contact</a>
                     </div>
                     <h1 class="title">Contact Dmitry</h1>
                 </main>
