--- a/projects/index.html
+++ b/projects/index.html
@@ -15,10 +15,10 @@
         <div class="container">
             <main>
                 <div class="link-menu">
-                        <a href="../index.html">About</a>
-                        <a href="../projects/index.html">Projects</a>
-                        <a href="../resume/index.html">Résumé</a>
-                        <a href="../contact/index.html">Contact</a>
+                        <a href="../">About</a>
+                        <a href="../projects/">Projects</a>
+                        <a href="../resume/">Résumé</a>
+                        <a href="../contact/">Contact</a>
                 </div>
                 <h1 class="title">Dmitry&#x27;s Projects</h1>
             </main>
@@ -47,7 +47,7 @@
                             <li>Developed novel means of generating GraphQL service from OData service description </li>
                             <li>Implemented translation of OData API descriptions into GraphQL schema (collection
                                 mechanics, type annotation, entity inheritance) </li>
-                            <li><a href="javascript:void(0)">&gt;70 stars, &gt;10 forks, used by &gt;20 projects on
+                            <li><a href="https://github.com/microsoftgraph/graphql-demo">&gt;70 stars, &gt;10 forks, used by &gt;20 projects on
                                     GitHub</a></li>
                         </ul>
                     </div>
@@ -61,7 +61,7 @@
                                 content (documents, infographics, etc)</li>
                             <li>Developed mechanisms for clustering related information </li>
                             <li>Built using React, Node.js and MongoDB </li>
-                            <li><a href="&quot;4ej.co&quot;">Explore in 4EJ</a></li>
+                            <li><a href="https://4ej.co">Explore in 4EJ</a></li>
                         </ul>
                     </div>
                 </div>
