--- a/projects/index.html
+++ b/projects/index.html
@@ -147,6 +147,16 @@
                         </ul>
                     </div>
                 </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h3>My Product Jobs</h3>
+                        <p><img alt="App screenshot" src="../img/mpj.png" /></p>
+                        <ul>
+                            <li>Built a curated product management job board using Next.js and Google Cloud Functions</li>
+                            <li><a href="https://www.myproductjobs.com">Browse openings on My Product Jobs</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
