projects text update

--- a/projects/index.html
+++ b/projects/index.html
@@ -30,7 +30,7 @@
                     <div>
                         <div class="card-body">
                             <ul>
-                                <li>Built platform that enables platform owners to better support API integrators </li>
+                                <li>Built a platform that empowers API operators to better support their API integrators </li>
                                 <li>Developed a custom OpenAPI 3.0 parser to automatically analyze request bodies for
                                     correctness, suggest changes</li>
                                 <li>Built service, admin console web app, support web app and SDKs </li>
