--- a/resume/index.html
+++ b/resume/index.html
@@ -24,9 +24,9 @@
                     <h1 class="title">Dmitry&#x27;s Résumé</h1>
                 </main>
                 <div class="grid">
-                    <div class="card">
+                    <div class="text-card">
                         <div class="card-body">
-                            <p><a href="../pdf/dmitryresume2020.pdf">View Résumé »</a></p>
+                            <a href="../pdf/dmitryresume2020.pdf">View Résumé »</a>
                         </div>
                     </div>
                 </div>
