--- a/contact/index.html
+++ b/contact/index.html
@@ -24,7 +24,7 @@
                     <h1 class="title">Contact Dmitry</h1>
                 </main>
                 <div class="grid">
-                    <div class="card">
+                    <div class="text-card">
                         <div class="card-body">
                             <ul>
                                 <li><a href="https://www.linkedin.com/in/dpim/">LinkedIn</a></li>
