--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h1 class="title">Dmitry Pimenov</h1>
                 </main>
                 <div class="grid">
-                    <div class="card">
+                    <div class="text-card">
                         <div class="card-body">
                             <p>I&#x27;m an engineer, product thinker and futurist. Professionally, I&#x27;ve worked on
                                 building large-scale developer platforms, productivity software and blockchain
