--- a/projects/index.html
+++ b/projects/index.html
@@ -24,9 +24,12 @@
             </main>
             <div class="grid">
                 <div class="card">
-                    <h3 class="title">Tapioca - API Helpdesk</h3><iframe src="https://player.vimeo.com/video/321909326"
-                        width="600" height="360" frameBorder="0" webkitallowfullscreen="true" mozallowfullscreen="true"
-                        allowfullscreen=""></iframe>
+                    <h3 class="title">Tapioca - API Helpdesk</h3>
+                    <div class="card-media-container">
+                        <iframe src="https://player.vimeo.com/video/321909326"
+                            width="600" height="280" frameBorder="0" webkitallowfullscreen="true" mozallowfullscreen="true"
+                            allowfullscreen=""></iframe>
+                    </div>
                     <div>
                         <div class="card-body">
                             <ul>
@@ -34,7 +37,7 @@
                                 <li>Developed a custom OpenAPI 3.0 parser to automatically analyze request bodies for
                                     correctness, suggest changes</li>
                                 <li>Built service, admin console web app, support web app and SDKs </li>
-                                <li><a href="https://tapioca.help/">Do you maintain an API? Join the beta</a></li>
+                                <li><a href="https://tapioca.help/">Do you maintain an API? Join the beta »</a></li>
                             </ul>
                         </div>
                     </div>
@@ -42,63 +45,73 @@
                 <div class="card">
                     <div class="card-body">
                         <h3>GraphQL for Microsoft Graph</h3>
-                        <p><img alt="Graphiql Animation" src="../img/gql1.gif" /></p>
+                        <div class="card-media-container">
+                            <img alt="Graphiql Animation" src="../img/gql1.gif" />
+                        </div>
                         <ul>
                             <li>Developed novel means of generating GraphQL service from OData service description </li>
                             <li>Implemented translation of OData API descriptions into GraphQL schema (collection
                                 mechanics, type annotation, entity inheritance) </li>
                             <li><a href="https://github.com/microsoftgraph/graphql-demo">&gt;70 stars, &gt;10 forks, used by &gt;20 projects on
-                                    GitHub</a></li>
+                                    GitHub »</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h3>4EJ - Google Maps for Infographics</h3>
-                        <p><img alt="App screenshot" src="../img/4ej1.png" /></p>
+                        <div class="card-media-container">
+                            <img alt="App screenshot" src="../img/4ej1.png" />
+                        </div>
                         <ul>
                             <li>Designed, built and shipped web app &amp; service for sharing and exploring longform
                                 content (documents, infographics, etc)</li>
                             <li>Developed mechanisms for clustering related information </li>
                             <li>Built using React, Node.js and MongoDB </li>
-                            <li><a href="https://4ej.co">Explore in 4EJ</a></li>
+                            <li><a href="https://4ej.co">Explore in 4EJ »</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h3>Grassroots - Local Political Discussion</h3>
-                        <p><img alt="App screenshot" src="../img/grass1.jpeg" />
-                            <img alt="App screenshot" src="../img/grass2.jpeg" /> </p>
+                        <div class="card-media-container">
+                            <img alt="App screenshot" src="../img/grass1.jpeg" />
+                            <img alt="App screenshot" src="../img/grass2.jpeg" /> 
+                        </div>
                         <ul>
                             <li>Designed, built and shipped an iOS app for enabling political discussion among people
                                 who share a common congressional district </li>
                             <li>App built with Swift 3, backend built using Node.js/Express, MySQL and Redis</li>
                             <li><a
                                     href="https://itunes.apple.com/us/app/grassroots-local-political-discussion/id1257472526?ls=1&amp;mt=8">Available
-                                    on the App Store</a></li>
+                                    on the App Store »</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h3>Cardiyo - Social Run Tracking</h3>
-                        <p><img alt="App screenshot" src="../img/cyo1.jpeg" />
-                            <img alt="App screenshot" src="../img/cyo2.jpeg" /></p>
+                        <div class="card-media-container">
+                            <img alt="App screenshot" src="../img/cyo1.jpeg" />
+                            <img alt="App screenshot" src="../img/cyo2.jpeg" />
+                        </div>
                         <ul>
                             <li>Designed, built and shipped a social run tracking app that allows users to share running
                                 experiences (courses, photos, captions) vs just stats </li>
                             <li>Wrote iOS app in Swift 3, backend using Node.js/Express, MySQL</li>
                             <li><a
                                     href="https://itunes.apple.com/us/app/cardiyo-social-run-tracker/id1198644231?ls=1&amp;mt=8">Available
-                                    on the App Store</a></li>
+                                    on the App Store »</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h3>206 Neighborhoods</h3>
-                        <p><img alt="App-screenshot" src="https://github.com/dpim/206/raw/master/screenshot.png" /></p>
+                        <div class="card-media-container">
+                            <img alt="App-screenshot" src="https://github.com/dpim/206/raw/master/screenshot.png" />
+                        </div>
                         <ul>
                             <li>Shipped a web app that makes it easy for prospective renters/home buyers to research and
                                 compare Seattle neighborhoods in terms of schools, public facilities and public/property
@@ -106,27 +119,31 @@
                             <li>Built a backend in Node.js for proxying service-to-service queries to Seattle Open Data
                                 SoQL APIs, aggregating relevant data and resolving locations in a variety of formats
                             </li>
-                            <li><a href="http://206neigh.azurewebsites.net/">See it live</a></li>
-                            <li><a href="https://github.com/dpim/206">GitHub repo</a></li>
+                            <li><a href="http://206neigh.azurewebsites.net/">See it live »</a></li>
+                            <li><a href="https://github.com/dpim/206">GitHub repo »</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h3>Wedge Analytics - iOS App Insights</h3>
-                        <p><img alt="App screenshot" src="../img/wedge1.png" /></p>
+                        <div class="card-media-container">
+                            <img alt="App screenshot" src="../img/wedge1.png" />
+                        </div>
                         <ul>
                             <li>Built a proof-of-concept analytics framework for tracking deep link schemes on device
                             </li>
-                            <li><a href="https://www.youtube.com/watch?v=1INVQXbdoZI">Demo</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=1INVQXbdoZI">Demo »</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h3>Bottle - Hyperlocal Photo Sharing</h3>
-                        <p><img alt="App screenshot" src="../img/bottle1.png" />
-                            <img alt="App screenshot" src="../img/bottle2.png" /></p>
+                        <div class="card-media-container">
+                            <img alt="App screenshot" src="../img/bottle1.png" />
+                            <img alt="App screenshot" src="../img/bottle2.png" />
+                        </div>
                         <ul>
                             <li>Designed, developed and shipped iOS app for sharing pictures with people around you
                                 (like Snapchat for places) </li>
@@ -139,8 +156,10 @@
                 <div class="card">
                     <div class="card-body">
                         <h3>Helio - Predictive Alarm Clock</h3>
-                        <p><img alt="App screenshot" src="../img/helio1.png" />
-                            <img alt="App screenshot" src="../img/helio2.png" /></p>
+                        <div class="card-media-container">
+                            <img alt="App screenshot" src="../img/helio1.png" />
+                            <img alt="App screenshot" src="../img/helio2.png" />
+                        </div>
                         <ul>
                             <li>Shipped an iOS app for passive sleep tracking </li>
                             <li>Developed algorithm for adjusting wake time based on qualitative user input </li>
@@ -150,10 +169,12 @@
                 <div class="card">
                     <div class="card-body">
                         <h3>My Product Jobs</h3>
-                        <p><img alt="App screenshot" src="../img/mpj.png" /></p>
+                        <div class="card-media-container">
+                            <img alt="App screenshot" src="../img/mpj.png" />
+                        </div>
                         <ul>
                             <li>Built a curated product management job board using Next.js and Google Cloud Functions</li>
-                            <li><a href="https://www.myproductjobs.com">Browse openings on My Product Jobs</a></li>
+                            <li><a href="https://www.myproductjobs.com">Browse openings on My Product Jobs »</a></li>
                         </ul>
                     </div>
                 </div>
