additional styling tweaks

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 <div class="grid">
                     <div class="text-card">
                         <div class="card-body">
-                            <p>I&#x27;m an engineer, product thinker and futurist. Professionally, I&#x27;ve worked on
+                            I&#x27;m an engineer, product thinker and futurist. Professionally, I&#x27;ve worked on
                                 building large-scale developer platforms, productivity software and blockchain
                                 applications.
                                 At the same time, I&#x27;ve built a few <a href="/projects">developer tools and social
-                                    networks</a> of my own.</p>
-                            <p>I love crafting new products, working through thorny problems and all the learning that
+                                    networks</a> of my own.
+                                <p> I love crafting new products, working through thorny problems and all the learning that
                                 comes along the way. </p>
                         </div>
                     </div>
