--- a/projects/index.html
+++ b/projects/index.html
@@ -27,8 +27,9 @@
                     <h3 class="title">Tapioca - API Helpdesk</h3>
                     <div class="card-media-container">
                         <iframe src="https://player.vimeo.com/video/321909326"
-                            width="600" height="280" frameBorder="0" webkitallowfullscreen="true" mozallowfullscreen="true"
-                            allowfullscreen=""></iframe>
+                            width="600px" height="380px" frameBorder="0" webkitallowfullscreen="true" mozallowfullscreen="true"
+                            allowfullscreen="">
+                        </iframe>
                     </div>
                     <div>
                         <div class="card-body">
@@ -37,7 +38,7 @@
                                 <li>Developed a custom OpenAPI 3.0 parser to automatically analyze request bodies for
                                     correctness, suggest changes</li>
                                 <li>Built service, admin console web app, support web app and SDKs </li>
-                                <li><a href="https://tapioca.help/">Do you maintain an API? Join the beta »</a></li>
+                                <li><a href="https://tapioca.help/">Do you maintain an API? Join the beta →</a></li>
                             </ul>
                         </div>
                     </div>
@@ -53,7 +54,7 @@
                             <li>Implemented translation of OData API descriptions into GraphQL schema (collection
                                 mechanics, type annotation, entity inheritance) </li>
                             <li><a href="https://github.com/microsoftgraph/graphql-demo">&gt;70 stars, &gt;10 forks, used by &gt;20 projects on
-                                    GitHub »</a></li>
+                                    GitHub →</a></li>
                         </ul>
                     </div>
                 </div>
@@ -68,7 +69,7 @@
                                 content (documents, infographics, etc)</li>
                             <li>Developed mechanisms for clustering related information </li>
                             <li>Built using React, Node.js and MongoDB </li>
-                            <li><a href="https://4ej.co">Explore in 4EJ »</a></li>
+                            <li><a href="https://4ej.co">Explore in 4EJ →</a></li>
                         </ul>
                     </div>
                 </div>
@@ -85,7 +86,7 @@
                             <li>App built with Swift 3, backend built using Node.js/Express, MySQL and Redis</li>
                             <li><a
                                     href="https://itunes.apple.com/us/app/grassroots-local-political-discussion/id1257472526?ls=1&amp;mt=8">Available
-                                    on the App Store »</a></li>
+                                    on the App Store →</a></li>
                         </ul>
                     </div>
                 </div>
@@ -102,7 +103,7 @@
                             <li>Wrote iOS app in Swift 3, backend using Node.js/Express, MySQL</li>
                             <li><a
                                     href="https://itunes.apple.com/us/app/cardiyo-social-run-tracker/id1198644231?ls=1&amp;mt=8">Available
-                                    on the App Store »</a></li>
+                                    on the App Store →</a></li>
                         </ul>
                     </div>
                 </div>
@@ -119,8 +120,8 @@
                             <li>Built a backend in Node.js for proxying service-to-service queries to Seattle Open Data
                                 SoQL APIs, aggregating relevant data and resolving locations in a variety of formats
                             </li>
-                            <li><a href="http://206neigh.azurewebsites.net/">See it live »</a></li>
-                            <li><a href="https://github.com/dpim/206">GitHub repo »</a></li>
+                            <li><a href="http://206neigh.azurewebsites.net/">See it live →</a></li>
+                            <li><a href="https://github.com/dpim/206">GitHub repo →</a></li>
                         </ul>
                     </div>
                 </div>
@@ -133,7 +134,7 @@
                         <ul>
                             <li>Built a proof-of-concept analytics framework for tracking deep link schemes on device
                             </li>
-                            <li><a href="https://www.youtube.com/watch?v=1INVQXbdoZI">Demo »</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=1INVQXbdoZI">Demo →</a></li>
                         </ul>
                     </div>
                 </div>
@@ -174,7 +175,7 @@
                         </div>
                         <ul>
                             <li>Built a curated product management job board using Next.js and Google Cloud Functions</li>
-                            <li><a href="https://www.myproductjobs.com">Browse openings on My Product Jobs »</a></li>
+                            <li><a href="https://www.myproductjobs.com">Browse openings on My Product Jobs →</a></li>
                         </ul>
                     </div>
                 </div>
