--- a/resume/index.html
+++ b/resume/index.html
@@ -26,7 +26,7 @@
                 <div class="grid">
                     <div class="text-card">
                         <div class="card-body">
-                            <a href="../pdf/dmitryresume2020.pdf">View Résumé »</a>
+                            <a href="../pdf/dmitryresume2020.pdf">View Résumé →</a>
                         </div>
                     </div>
                 </div>
