minor styling changes for mobile

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="container">
         <main>
           <div class="link-menu">
-            <a href="./index.html">About</a>
-            <a href="./projects/index.html">Projects</a>
-            <a href="./contact/index.html">Contact</a>
+            <a href="./">About</a>
+            <a href="./projects/">Projects</a>
+            <a href="./contact/">Contact</a>
           </div>
           <h1 class="title">Dmitry Pimenov</h1>
         </main>
@@ -26,7 +26,7 @@
                 Professionally, I&#x27;ve worked on building large-scale
                 developer platforms, productivity software and blockchain
                 applications. At the same time, I&#x27;ve built a few
-                <a href="./projects/index.html">
+                <a href="./projects/">
                     developer tools and social networks</a> of
                     my own.
               </p>
