--- a/contact/index.html
+++ b/contact/index.html
@@ -12,9 +12,9 @@
       <div class="container">
         <main>
           <div class="link-menu">
-            <a href="../index.html">About</a>
-            <a href="../projects/index.html">Projects</a>
-            <a href="../contact/index.html">Contact</a>
+            <a href="../">About</a>
+            <a href="../projects/">Projects</a>
+            <a href="../contact/">Contact</a>
           </div>
           <h1 class="title">Reach Out</h1>
         </main>
