--- a/projects/index.html
+++ b/projects/index.html
@@ -11,9 +11,9 @@
     <div class="container">
       <main>
         <div class="link-menu">
-          <a href="../index.html">About</a>
-          <a href="../projects/index.html">Projects</a>
-          <a href="../contact/index.html">Contact</a>
+          <a href="../">About</a>
+          <a href="../projects/">Projects</a>
+          <a href="../contact/">Contact</a>
         </div>
         <h1 class="title">Things I&#x27;ve Built</h1>
       </main>
