fixed product links

--- a/projects/index.html
+++ b/projects/index.html
@@ -62,7 +62,7 @@
               </li>
               <li>Publish your blog, CV or class notes in seconds</li>
               <li>Built using Next.js, Google Cloud Storage, App Script</li>
-              <li><a href="javascript:void(0)">Try it now</a></li>
+              <li><a href="https://lttrs.co">Try it now</a></li>
             </ul>
           </div>
         </div>
@@ -77,7 +77,7 @@
               </li>
               <li>Developed mechanisms for clustering related information</li>
               <li>Built using React, Node.js and MongoDB</li>
-              <li><a href='"4ej.co"'>Explore in 4EJ</a></li>
+              <li><a href="https://4ej.co">Explore in 4EJ</a></li>
             </ul>
           </div>
         </div>
@@ -96,8 +96,8 @@
                 inheritance)
               </li>
               <li>
-                <a href="javascript:void(0)"
-                  >&gt;70 stars, &gt;10 forks, used by &gt;20 projects on
+                <a href="https://github.com/microsoftgraph/graphql-demo"
+                  >&gt;75 stars, &gt;15 forks, used by &gt;20 projects on
                   GitHub</a
                 >
               </li>
