--- a/contact/index.html
+++ b/contact/index.html
@@ -16,12 +16,13 @@
             <a href="../projects/">Projects</a>
             <a href="../contact/">Contact</a>
           </div>
-          <h1 class="title">Reach Out</h1>
+          <h1 class="title">Contact Info</h1>
         </main>
         <div class="grid">
           <div class="text-card">
             <div class="card-body">
-              <ul>
+              <p>Connect with me on the following platforms:</p>
+              <ul>  
                 <li>
                   <a href="https://www.linkedin.com/in/dpim/">LinkedIn</a>
                 </li>
@@ -30,7 +31,10 @@
                 </li>
                 <li><a href="https://www.twitter.com/dpim">Twitter</a></li>
                 <li>
-                  <a href="https://stackoverflow.com/users/8934271/dmitry-pimenov" >StackOverflow</a>
+                  <a
+                    href="https://stackoverflow.com/users/8934271/dmitry-pimenov"
+                    >StackOverflow</a
+                  >
                 </li>
                 <li><a href="https://www.github.com/dpim">GitHub</a></li>
               </ul>
