--- a/projects/index.html
+++ b/projects/index.html
@@ -32,8 +32,7 @@
             <div class="card-body">
               <ul>
                 <li>
-                  Built platform that enables platform owners to better support
-                  API integrators
+                  Built a platform (and SDKs) for streamlining API debugging and support
                 </li>
                 <li>
                   Developed a custom OpenAPI 3.0 parser to automatically analyze
@@ -242,6 +241,9 @@
               <li>
                 Built a curated product management job board using Next.js and
                 Google Cloud Functions
+              </li>
+              <li>
+                Accumulated more than 3,000 unique sessions in 3 months
               </li>
               <li>
                 <a href="https://myproductjobs.com"
