--- a/index.html
+++ b/index.html
@@ -22,20 +22,19 @@
           <div class="text-card">
             <div class="card-body">
               <p>
-                I&#x27;m a product thinker, engineer and tinkerer.
-                Professionally, I&#x27;ve worked on building large-scale
-                developer platforms, productivity software and blockchain
-                applications. At the same time, I&#x27;ve built a few
+                I build products.
+                Professionally, I&#x27;ve worked on large-scale
+                developer platforms, productivity software and novel blockchain
+                applications. At the same time, I&#x27;ve shipped a few
                 <a href="./projects/">
                     developer tools and social networks</a> of
                     my own.
               </p>
               <p>Currently, I&#x27;m most interested in:</p>
               <ul>
-                <li>Building and scaling platforms</li>
+                <li>Platform strategy</li>
                 <li>Workflow automation and productivity</li>
-                <li>Simplifying payments and money movement</li>
-                <li>Creating the next wave of social products</li>
+                <li>Payments and money movement</li>
               </ul>
             </div>
           </div>
